--- a/webreact/public/index.html
+++ b/webreact/public/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="root"></div>
     <!-- <script src="vendor/vendors.dll.js"></script> -->
     <script src="https://cdn.bootcss.com/react/16.8.1/umd/react.profiling.min.js"></script>
     <script src="https://cdn.bootcss.com/react-dom/16.8.1/umd/react-dom.profiling.min.js"></script>
